[gd_scene load_steps=8 format=3 uid="uid://k01rlfsr8l3c"]

[ext_resource type="Script" uid="uid://ckhcvr40qy4ka" path="res://scenes/unit/item/splitter_four.gd" id="1_aop0d"]
[ext_resource type="TileSet" uid="uid://dqx6jkj8wpoka" path="res://resources/unit/item/items.tres" id="2_s72b2"]
[ext_resource type="TileSet" uid="uid://vepbkdlunoox" path="res://resources/unit/item/numbers.tres" id="3_s72b2"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ij1o2"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6xpck"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_43vb6"]
light_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bd1tc"]
size = Vector2(256, 256)

[node name="SplitterFour" type="CharacterBody2D"]
z_index = 13
z_as_relative = false
collision_layer = 131072
collision_mask = 0
script = ExtResource("1_aop0d")

[node name="Component" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 1, 0, 4, 0, 1, 0, 0, 0)
tile_set = ExtResource("2_s72b2")

[node name="PowerLevel" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 1, 0, 9, 0, 3, 0, 0, 0)
tile_set = ExtResource("2_s72b2")

[node name="PowerLights1" type="TileMapLayer" parent="."]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_ij1o2")
position = Vector2(89, 103)
tile_set = ExtResource("3_s72b2")

[node name="PowerLights2" type="TileMapLayer" parent="."]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_6xpck")
position = Vector2(119, 103)
tile_set = ExtResource("3_s72b2")

[node name="PowerLights3" type="TileMapLayer" parent="."]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_43vb6")
position = Vector2(95, 103)
tile_set = ExtResource("3_s72b2")

[node name="ConnectionTop" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_s72b2")

[node name="ConnectionBottom" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_s72b2")

[node name="ConnectionLeft" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_s72b2")

[node name="ConnectionRight" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_s72b2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(128, 128)
shape = SubResource("RectangleShape2D_bd1tc")
